prj_1-ingress-nginx/k8s/deploiement-jeudi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projet1-html-deployment-jeudi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-container
        image: thierno9/projet1-html-jeudi
        ports:
        - containerPort: 80
