prj_1-ingress-nginx/k8s/deploiement-mercredi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projet1-html-deployment-mercredi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-mercredi
  template:
    metadata:
      labels:
        app: nginx-mercredi
    spec:
      containers:
      - name: nginx-container
        image: thierno9/projet1-html
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: projet1-html-mercredi-service
spec:
  # type: NodePort
  selector:
    app: nginx-mercredi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
