prj_1-ingress-nginx/k8s/service-jeudi.yml
apiVersion: v1
kind: Service
metadata:
  name: projet1-html-jeudi-service
spec:
  # type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
